--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <h1>{{ title }}</h1>
+
+<pre>數字: {{ 12345.67 | number }}
+貨幣: {{ 12345.67 | currency }}
+日期: {{ '2024-01-31 20:02:19' | date }}
+百分比: {{ 0.05 | percent }}
+  </pre>
+
+
 <h1>
   {{ 'MSG.Hello World' | translate:{ name: 'Will' } }}
 </h1>
