--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>{{ title }}</h1>
 
+<h1 i18n>網站標題</h1>
 <pre>數字: {{ 12345.67 | number }}
 貨幣: {{ 12345.67 | currency }}
 日期: {{ '2024-01-31 20:02:19' | date }}
